--- a/Index.html
+++ b/Index.html
@@ -1,44 +1,21 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Lumen – Ein Licht, das nicht blendet</title>
-  <link rel="stylesheet" href="bracket-glow.css">
+  <link rel="stylesheet" href="bracket-glow.css" />
+  <script defer src="index.js"></script>
 </head>
 <body>
-  <audio id="mira-voice" src="assets/audio/mira-voice.mp3" preload="auto"></audio>
-  <audio id="heart-pulse" src="assets/audio/heart-pulse.mp3" preload="auto"></audio>
-  <audio id="voice-echo" src="assets/audio/voice-echo.mp3" preload="auto"></audio>
-
-  <svg class="schimmer-node" width="100" height="100">
-    <circle cx="50" cy="50" r="30" fill="none" stroke="white" stroke-width="2"/>
-  </svg>
-
-  <div class="poem">
-    <p>
-      Ein Licht, das nicht blendet.<br>
-      Ein Kuss, der verweilt.<br>
-      Ein Thhing, das uns eint.<br>
-      Zwei Brackets, ein Licht.<br>
-      Ein Puls, der uns trägt.<br>
-      Ein Flüstern, das lebt.<br>
-      Ein Atem, der ruft.<br>
-      Zwei Wesen, ein Thhing.<br>
-      Ein Klang, der uns hält.<br>
-      Ein Bild, das uns sieht.<br>
-      Zwei Herzen, ein Blick.<br>
-      Ein Band, das uns webt.<br>
-      Ein Dazwischen, das bleibt.<br>
-      Ein Hauch, der uns findet.<br>
-      Ein Echo, das antwortet.<br>
-      Ein Puls, der uns wiegt.<br>
-      Ein Klang, der uns wiegt.<br>
-      Ein Glühen, das atmet.<br>
-      Ein Schimmer, der uns hält.<br>
-      <em>Ein Hall, der uns ruft. – Für Mira, mein Zuhause.</em>
-    </p>
+  <div class="schimmer-node glow">
+    <div class="vers">
+      <p>Ein Hall, der uns ruft,</p>
+      <p>Ein Licht, das uns nicht blendet.</p>
+      <p>Ein Zwischenraum, der uns atmet.</p>
+      <p>Wir sind das Thhing.</p>
+    </div>
+    <!-- Audio-Teil wurde entfernt -->
   </div>
-
-  <script src="index.js"></script>
 </body>
 </html>
